:lipstick: Fixed line height spacing of paragraph

--- a/styles/style-articles.css
+++ b/styles/style-articles.css
@@ -194,6 +194,7 @@ textarea:hover {
     font-size: 1rem;
     font-weight: 600;
     color: #004b77;
+    line-height: 1.4rem;
     margin: 1rem 1rem;
     z-index: -1;
 }
